<resources>
    <!--Menu Names-->
    <string name="app_name">TxTr</string>

    <!--Toolbar-->
    <string name="toolbar_permissions">Permissions</string>
    <string name="toolbar_refresh">Refresh</string>
    <string name="toolbar_dark_mode">DarkMode</string>

    <!--Bottom Navigation-->
    <string name="menu_home">Home</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_summary">Summary</string>
    <string name="menu_messages">Messages</string>

    <!--Graph Labels-->
    <string name="tab_day">Day</string>
    <string name="tab_week">Week</string>
    <string name="tab_month">Month</string>

    <!--Content Descriptions-->
    <string name="fab_contacts">Add Contacts</string>

    <!--Navigation Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Endeavor</string>
    <string name="nav_header_subtitle">App displays popular recipes with instructions</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Summary Labels-->
    <string name="day_summary_title">Amount Per Day</string>
    <string name="week_summary_title">Amount Per Week</string>
    <string name="month_summary_title">Amount Per Month</string>
</resources>
