<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/fragment_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/fragment_statistics"
        android:icon="@drawable/ic_equalizer"
        android:title="@string/menu_statistics"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/fragment_summary"
        android:icon="@drawable/ic_forum"
        android:title="@string/menu_summary"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/fragment_messages"
        android:icon="@drawable/ic_messages"
        android:title="@string/menu_messages"
        app:showAsAction="ifRoom"/>
</menu>