<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.summary.SummaryFragment">

    <TextView
        android:id="@+id/summary_day_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/day_summary_title"
        android:layout_marginTop="?attr/actionBarSize"
        android:textSize="20sp"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/summary_day_sent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_below="@+id/summary_day_title"
        android:textSize="20sp"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/summary_day_received"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_below="@+id/summary_day_sent"
        android:textSize="20sp"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/summary_day_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_below="@+id/summary_day_received"
        android:textSize="20sp"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/summary_week_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_below="@+id/summary_day_received"
        android:layout_marginTop="20dp"
        android:text="@string/week_summary_title"
        android:textSize="20sp"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/summary_week_sent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_below="@+id/summary_week_title"
        android:textSize="20sp"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/summary_week_received"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_below="@+id/summary_week_sent"
        android:textSize="20sp"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/summary_week_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_below="@+id/summary_week_received"
        android:textSize="20sp"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/summary_month_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_below="@+id/summary_week_received"
        android:layout_marginTop="20dp"
        android:text="@string/month_summary_title"
        android:textSize="20sp"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/summary_month_sent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_below="@+id/summary_month_title"
        android:textSize="20sp"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/summary_month_received"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_below="@+id/summary_month_sent"
        android:textSize="20sp"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/summary_month_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_below="@+id/summary_month_received"
        android:textSize="20sp"
        android:textColor="@color/colorBlack" />
</RelativeLayout>

